## Process this file with automake to produce Makefile.in

info_TEXINFOS = ssip.texi opentts.texi otts-say.texi
noinst_info_TEXINFOS = speech-dispatcher-cs.texi

opentts_TEXINFOS = gpl.texi fdl.texi
speech_dispatcher_cs_TEXINFOS = gpl.texi fdl.texi
ssip_TEXINFOS = gpl.texi fdl.texi

EXTRA_DIST = figures dummy-message.txt
