## Process this file with automake to produce Makefile.in

dist_moduleconf_DATA =
dist_moduleconforig_DATA =

if cicero_support
dist_moduleconf_DATA += cicero.conf
dist_moduleconforig_DATA += cicero.conf
endif

if espeak_support
dist_moduleconf_DATA += espeak.conf
dist_moduleconforig_DATA += espeak.conf
endif

if festival_support
dist_moduleconf_DATA += festival.conf
dist_moduleconforig_DATA += festival.conf
endif

if flite_support
dist_moduleconf_DATA += flite.conf
dist_moduleconforig_DATA += flite.conf
endif

if ibmtts_support
dist_moduleconf_DATA += ibmtts.conf
dist_moduleconforig_DATA += ibmtts.conf
endif

if generic_support
dist_moduleconf_DATA += dtk-generic.conf epos-generic.conf espeak-generic.conf espeak-mbrola-generic.conf llia_phon-generic.conf swift-generic.conf
dist_moduleconforig_DATA += dtk-generic.conf epos-generic.conf espeak-generic.conf espeak-mbrola-generic.conf llia_phon-generic.conf swift-generic.conf
endif

if ivona_support
dist_moduleconf_DATA += ivona.conf
dist_moduleconforig_DATA += ivona.conf
endif
